--- a/notebooks/Overview.ipynb
+++ b/notebooks/Overview.ipynb
@@ -83,47 +83,8 @@
     }
    ],
    "source": [
-    "model.load_repo_widget()"
+    "model.download_github_repo(silent=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "5f975852",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Volume in drive C has no label.\n",
-      " Volume Serial Number is C2DB-095E\n",
-      "\n",
-      " Directory of c:\\modelflow-bare\\modelflow-bare\\notebooks\\Pakistan model\n",
-      "\n",
-      "06-11-2023  22:47    <DIR>          .\n",
-      "06-11-2023  23:23    <DIR>          ..\n",
-      "06-11-2023  22:47                66 .gitattributes\n",
-      "06-11-2023  22:47    <DIR>          experiments\n",
-      "06-11-2023  22:47             1.065 LICENSE\n",
-      "06-11-2023  22:47    <DIR>          models\n",
-      "06-11-2023  22:47                22 README.md\n",
-      "               3 File(s)          1.153 bytes\n",
-      "               4 Dir(s)  628.083.658.752 bytes free\n"
-     ]
-    }
-   ],
-   "source": [
-    "!dir \"Pakistan model\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5df8a5e8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
