--- a/notebooks/Overview.ipynb
+++ b/notebooks/Overview.ipynb
@@ -83,7 +83,9 @@
     }
    ],
    "source": [
-    "model.download_github_repo(silent=True)"
+    "model.download_github_repo(silent=True)\n",
+    "# when access to world bank github is there to be replaced by\n",
+    "# model.Worldbank_Models()"
    ]
   }
  ],
