--- a/notebooks/WBstart.ipynb
+++ b/notebooks/WBstart.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Welcome to the World Bank Macro Model Warehouse (WBMMW) \n",
-    "**Press Cell\\>Run All in the menu line**"
+    "**Go to the menu bar and click on `Cell(in jupyter)/Runtime(in Colab)` > `Run all`.**"
    ]
   },
   {
@@ -18,6 +18,20 @@
     "For most countries the models have not been populated. \n",
     "\n",
     "**Use the Pakistan examples**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb4ae361",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This is code to manage dependencies if the notebook is executed in the google colab cloud service\n",
+    "if 'google.colab' in str(get_ipython()):\n",
+    "  import os\n",
+    "  os.system('apt -qqq install graphviz')\n",
+    "  os.system('pip -qqq install ModelFlowIb ipysheet  --no-dependencies ')"
    ]
   },
   {
@@ -37,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.download_github_repo(silent=True)\n",
+    "model.download_github_repo(colab='google.colab' in str(get_ipython())\n",
     "# when access to world bank github is there to be replaced by\n",
     "# model.Worldbank_Models()"
    ]
