--- a/notebooks/WBstart.ipynb
+++ b/notebooks/WBstart.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.download_github_repo(colab='google.colab' in str(get_ipython())\n",
+    "model.download_github_repo(colab='google.colab' in str(get_ipython()))\n",
     "# when access to world bank github is there to be replaced by\n",
     "# model.Worldbank_Models()"
    ]
